// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar should apply fixed class 1`] = `
<div
  className="nav-bar fixed"
/>
`;

exports[`NavBar should apply shy class 1`] = `
<div
  className="nav-bar fixed shy"
/>
`;

exports[`NavBar should match snapshot 1`] = `
<div
  className="nav-bar"
/>
`;

exports[`NavBar should take regular element attributes 1`] = `
<div
  className="nav-bar my-class"
/>
`;
